[package]
name = "qapro-rs"
version = "0.1.1"
authors = ["yutiansut <yutiansut@qq.com>"]
edition = "2021"
description ="quantaxis rust version"
license = "MIT"
homepage ="https://github.com/yutiansut/quantaxis"
repository="https://github.com/quantaxis/quantaxis"



[lib]
name = "qapro_rs"
crate-type = ["rlib", "cdylib"]

[features]
pyo3-bindings = ["pyo3"]
openctp = ["dep:ctp2rs"]

[dependencies]
serde_json = "1.0.73"
serde_derive = "1.0"
serde = { version = "1.0", features = ["derive"] } # 序列化

uuid = { version = "0.8", features = ["serde", "v1", "v4"] }
hashbrown = { version = "0.12", features = ["serde"] }
log = "0.4.22"
regex = "1"
log4rs = "1.3"

rayon ="1.5"
lazy_static = "1.4.0"

reqwest = "0.9.22"
csv = "1.1.3"
clap = "2.33"
toml = "0.5"
redis = "0.18.0"
amiquip = "0.4.0"


bson = "0.13.0"
mongodb = {version = "1.1.1", default-features = false, features = ["sync"]}

redis-async = { version = "0.8", default-features = false, features = ["tokio10"] }
actix-web-actors={ version = "4.0.0-beta.8", default-features = false }
actix-redis = "0.10.0-beta.4"
actix = "0.12.0"
actix-rt = "2.5.0"
actix-web ={ version = "4.0.0-beta.5" ,default-features = false }
actix-cors = "0.6.0-beta.7"

futures="0.3.5"
futures-executor = "^0.3"
futures-test = "^0.3"
futures-util = "^0.3"
async-trait= "0.1.52"
chrono-tz= { version = "0.5.3", features = ["serde"] }
chrono = { version = "0.4.19", features = ["serde"] }

thiserror = "1.0"
rand = "0.7"
quadprog = "0.0.1"
itertools = "0.10.3"
pyo3 = { version = "0.20", features = ["extension-module"], optional = true }
# Polars 0.46+ 需要较新 num-traits（含 Euclid）；避免被其他 crate 拉到旧版
num-traits = "0.2.19"


##parsers

parse-display = "0.5.0"
quick-xml = { version = "0.22.0", features = ["serialize"] }
serde_yaml = "0.8.17"
serde_partiql = "1.1.64"
structopt = { version = "0.3.21", optional = true }
anyhow = "1.0.40"
atty = "0.2.14"
bat = { version = "0.18.3", optional = true }
collect-mac = "0.1.0"
indexmap = { version = "1.6.2", features = ["serde"] }

nom = "6.1.2"
ordered-float = { version = "2.0", default-features = false, features = [
    "serde",
] }
# Polars: use crates.io so the dependency tree stays compatible with current Rust
# (the old yutiansut fork pulled packed_simd_2 / ahash that no longer compile on Rust 1.78+).
evalexpr = "6.6.0"
ctp2rs = { git = "https://github.com/pseudocodes/ctp2rs", optional = true }

[dependencies.polars]
version = "0.46"
default-features = false
features = [
  "lazy",
  "parquet",
  "csv",
  "temporal",
  "strings",
  "performant",
  "serde",
  "rolling_window",
  "dtype-full",
  "pct_change",
  "diff",
]

[dependencies.clickhouse-rs]
version = "1.0.0-alpha.1"
default-features = false
features = ["async_std"]

